--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
-   background-image: url('./modules/img/pexels-eberhard-grossgasteiger-2310713.jpg');
+  background-image: url('./modules/img/pexels-eberhard-grossgasteiger-2310713.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .form {
   width: 260px;
   height: 80px;
@@ -21,6 +22,7 @@ body {
   justify-content: center;
   border-radius: 10px;
 }
+
 main {
   display: flex;
   padding-top: 50px;
@@ -31,7 +33,6 @@ main {
 
 .location-input {
   border: none;
-  background-color: none;
   background: none;
   color: rgb(0, 0, 0);
   width: 200px;
@@ -42,9 +43,8 @@ main {
 .location-input::placeholder {
   color: rgb(0, 0, 0);
   font-family: 'Raleway', sans-serif;
-   border-bottom: 1px solid rgb(255, 255, 255);
-   font-size: 20px;
-  
+  border-bottom: 1px solid rgb(255, 255, 255);
+  font-size: 20px;
 }
 
 button {
@@ -58,7 +58,7 @@ button {
 .main-weather {
   width: 300px;
   display: flex;
-  gap: 10px;
+  gap: 20px;
   margin-top: 20px;
   text-align: center;
 }
@@ -70,23 +70,21 @@ button {
   align-items: center;
   width: 150px;
   text-align: center;
-
 }
-
 
 .weather-text {
   font-size: 30px;
 }
 
 .main-degrees {
-  font-size: 40px;
+  font-size: 50px;
+  margin-top: 35px;
 }
 
 .degree-container {
   display: flex;
   flex-direction: column;
   gap: 10px;
- 
 }
 
 .other-info {
@@ -120,7 +118,7 @@ button {
 }
 
 .div-time {
-display: flex;
+  display: flex;
   flex-direction: column;
   gap: 10px;
 }
@@ -137,6 +135,73 @@ display: flex;
 
 .hour-section {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media only screen and (min-width: 768px){
+  .hour-section {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.day {
+  width: 120px;
+  border-right: 0.4px solid white;
+  font-size: 15px;
+}
+
+.div-number {
+  gap: 10px;
+}
+
+.day-name {
+  font-size: 18px;
+}
+@media only screen and (min-width: 1000px){
+  .hour-section {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0 0 0;
+  margin: 0;
+}
+
+.day {
+  width: 140px;
+  border-right: 0.4px solid white;
+  font-size: 16px;
+}
+
+.div-number {
+  gap: 30px;
+}
+
+.day-name {
+  font-size: 22px;
+}
+  @media only screen and (min-width: 1400px){
+  .hour-section {
+  padding: 60px 0 0 0;
+  gap: 10px
+
+}
+
+.day {
+  width: 180px;
+  font-size: 20px;
+}
+
+.div-number {
+  gap: 50px;
+}
+
+.day-name {
+  font-size: 26px;
+}
+}
+}
 }
