--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ body {
   background-image: url('./modules/img/pexels-eberhard-grossgasteiger-2310713.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  min-height: 1000px;
 }
 
 .sunny {
@@ -77,7 +78,7 @@ body {
 .form {
   width: 260px;
   height: 80px;
-  background-color: rgba(255, 255, 255, 0.347);
+  background-color: rgba(255, 255, 255, 0.496);
   display: flex;
   justify-content: center;
   border-radius: 10px;
@@ -117,12 +118,13 @@ button {
 
 .main-weather {
   width: 300px;
-  display: flex;
+  display: none;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   text-align: center;
   background-color: rgba(249, 249, 249, 0.71);
   border-radius: 10px;
+  padding: 20px 0 20px 0;
 }
 
 .weather-icon-container {
@@ -155,11 +157,11 @@ button {
 }
 
 .other-info {
+  display: none;
   margin-top: 20px;
   width: 260px;
   background-color: rgba(255, 255, 255, 0.473);
   border-radius: 10px;
-  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 20px;
@@ -227,7 +229,7 @@ button {
     align-items: center;
     gap: 10px;
     padding: 0;
-    margin: 0;
+    margin: 60px 0 60px 0;
   }
 
   .day {
@@ -260,7 +262,6 @@ button {
     background-color: rgba(255, 255, 255, 0.53);
     border-radius: 10px;
     border: 1px solid white;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: none;
     gap: 30px;
@@ -275,7 +276,7 @@ button {
       justify-content: center;
       align-items: center;
       padding: 30px 0 0 0;
-      margin: 0;
+      margin: 60px 0 60px 0;
       gap: 20px;
     }
 
@@ -303,8 +304,9 @@ button {
 
     @media only screen and (min-width: 1400px) {
       .hour-section {
-        padding: 60px 0 0 0;
-        gap: 10px;
+        padding: 30px 0 0 0;
+        margin: 30px 0 30px 0;
+        gap: 20px;
       }
 
       .day {
